Resolve mobile spacing on App container
- Select was displaying off-screen on mobile - use flex to center
  content and add margins to preserve readable mobile spacing.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,30 +1,36 @@
 .app__container {
-  left: 50%;
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   text-align: center;
+
+  /* vertically center content on large screens */
+  @media (min-width: 768px) {
+    height: 100vh;
+  }
 }
 
 .calculators__container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  width: 100%;
+
+  @media (min-width: 768px) {
+    flex-direction: row;
+  }
+}
+
+.select-program__container {
+  margin: 2rem 1rem 0;
+
+  @media (min-width: 768px) {
+    margin: 0;
+  }
 }
 
 /* This is the only way to get React Select inline*/
 .react-select__inline-container {
   display: inline-block;
+  height: min-content;
   padding-left: 0.5rem;
-}
-
-/* tablets & larger */
-@media (min-width: 768px) {
-  .app__container {
-    width: 90%;
-  }
-  .calculators__container {
-    flex-direction: row;
-  }
 }
