--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body,
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   line-height: 1.6;
+  margin: 0; /* Remove vertical scrollbar when elem height is 100vh */
 }
 
 h1,
